fix horizontal scroll

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -7,6 +7,7 @@
   background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
+
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
@@ -66,6 +67,8 @@
 
 #particles-js {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
